# auto-img-workflow

./: .env.example  .gitignore  AGENTS.md  DEPLOY.md  PROJECT_PLAN-v4.md  README.md  TK自动上架工作流_项目说明文件_v0.1.docx  TK自动上架工作流_项目说明文件_v0.1.md  TK自动上架系统项目说明文件_v0.3_Codex版.md  config.example.yaml  pyproject.toml  survey.xlsx  图生图问卷.xlsx
.openclaw/: workspace-state.json
docs/: architecture.md  feishu_callback_public_access.md  feishu_tables.md  image_prompt_template.md  image_workflow_spec.md  operations_handoff.md
examples/: feishu_image_task_record.sample.json
schemas/: copy_assets.schema.json  image_assets.schema.json  listing_package.schema.json  product_brief.schema.json
scripts/: check_env.ps1  start_cloudflared_quick_tunnel.bat  start_feishu_long_connection.bat  start_local_feishu_callback.bat  start_local_feishu_loop.bat  start_local_feishu_worker.bat  start_ops_runtime.bat  start_public_feishu_callback.ps1  status_ops_runtime.ps1  stop_ops_runtime.bat
src/tk_listing_workflow/: __init__.py  cli.py  config.py  errors.py  models.py  preflight.py  storage.py  task_manager.py  worker.py
src/tk_listing_workflow.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
src/tk_listing_workflow/ai/: __init__.py  image_workflow.py
src/tk_listing_workflow/data/: __init__.py  build_listing_package.py
templates/: a_plus_template.md  detail_page_template.md  feishu_image_task_table.csv  feishu_project_progress_table.csv  feishu_review_spec.md  main_image_rules.md  pricing_formula.md  shop_mapping.csv  tiktok_upload_template.csv  title_rules.md
(+36 files in other folders)
